--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     "bootstrap": "^5.1.3",
     "concurrently": "^7.0.0",
     "cra-template-redux": "1.0.3",
+    "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
+    "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
-    "sass": "^1.49.9"
+    "sass": "^1.49.9",
+    "uuid": "^9.0.0",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "concurrently \"react-scripts start\" \"npx json-server db.json --port 3001\"",
