--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "dependencies": {
     "@apollo/client": "^3.7.1",
     "@reduxjs/toolkit": "^1.8.0",
+    "@types/node": "^18.11.10",
     "bootstrap": "^5.1.3",
     "concurrently": "^7.0.0",
     "cra-template-redux": "1.0.3",
     "formik": "^2.2.9",
     "graphql": "^16.6.0",
+    "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.2",
     "react-dom": "^17.0.2",
@@ -17,6 +19,7 @@
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "sass": "^1.49.9",
+    "typescript": "^4.9.3",
     "uuid": "^9.0.0",
     "yup": "^0.32.11"
   },
@@ -42,6 +45,10 @@
     ]
   },
   "devDependencies": {
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.9",
+    "@types/react-redux": "^7.1.24",
+    "@types/uuid": "^9.0.0",
     "json-server": "^0.17.0"
   }
 }
